$Id: History,v 1.8 1999-05-17 14:39:15 stesting Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

May 17th J.Allison
- Added #undef os_times in G4Timer.hh to avoid clash with ObjectSpace when
  using STLInterface on Sun.

May 14th G.Cosmo (global-01-00-01)
- Still updates to STLInterface from the STL task-force (internal tag considered
  is STLInterface-04). Introduced wrapper files differentiated for each architecture.

May 11th G.Cosmo
- Updates and fixes to STLInterface headers. Input mainly from DEC and HP.
- Added G4Poisson.hh to HEPRandom/include. It includes the implementation
  of the global function "G4long G4Poisson(G4double)" which reproduces the
  GPOISS algorithm adopted in Geant3. Uses the CLHEP standard engines as
  basic random generators.

May 3rd G.Cosmo (global-01-00-00)
- Updates to STL interface ISO/ANSI headers (F.Benher)
- Added G4Exception call with STL strings in globals.hh and G4Exception.cc (F.Benher)

April 29th  G.Cosmo
- Moved SystemOfUnits.SI.h to G4UnitsTest.hh in management/include. This file is
  used only for test purposes and will not be tagged for public versions.

March 30th  M.Maire
- CodeWizard cleanup in G4UnitsTable. Fixed definition of operator=.
