@@ -1,4 +1,4 @@
-$Id: History,v 1.8 1999-05-17 14:39:15 stesting Exp $
+$Id: History,v 1.9 1999-05-19 18:49:00 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+May 19th G.Cosmo
+- templates.hh: added definition of DBL_EPSILON and FLT_EPSILON.
+  Added 'F' to single precision literal constants.
 
 May 17th J.Allison
 - Added #undef os_times in G4Timer.hh to avoid clash with ObjectSpace when
